--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-plugin-macros": "^3.1.0",
     "classnames": "^2.3.2",
     "normalize.css": "^8.0.1",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
