--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "babel-plugin-macros": "^3.1.0",
     "classnames": "^2.3.2",
     "normalize.css": "^8.0.1",
